--- a/index.html
+++ b/index.html
@@ -4,3 +4,5 @@
 <input type="text">
 <button>Google Search</button>
 <button>I'm Feeling Lucky</button>
+
+<a href="profile.html">Return to profile homepage</a>
