added open in new tab code to the links

--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <button>Google Search</button>
 <button>I'm Feeling Lucky</button>
 
-<a href="profile.html">Return to profile homepage</a>
+<a href="profile.html" target="blank">Return to profile homepage</a>
