--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,3 @@
 <h1>STEPHANIA MWIKALI</h1>
 <h2>Some work I have done</h2>
-<a href="index.html">View work</a>
+<a href="index.html" target="blank">View work</a>
