Added more info to profile page and styled it

--- a/profile.html
+++ b/profile.html
@@ -1,3 +1,25 @@
-<h1>STEPHANIA MWIKALI</h1>
-<h2>Some work I have done</h2>
-<a href="index.html" target="blank">View work</a>
+<!doctype html>
+<html>
+    <head>
+        <link rel="stylesheet" href="profile.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Black+Ops+One&family=Creepster&family=La+Belle+Aurore&family=MedievalSharp&family=Orbitron&family=Rye&display=swap" rel="stylesheet">
+        <script src="profile.js"></script>
+    </head>
+    <body>
+        <img src="steph.jpg">
+        <p>Hello, My name is Stephania</p>
+        <p>Here are some fun facts about me</p>
+        <ul>
+            <li>Play Tennis</li>
+            <li>I crochet</li>
+            <li>I can sing</li>
+        </ul>
+
+        <p>I also learn coding from a site called Scrimba and so far I have worked on some projects.To view some of the projects I've done,<a href="index.html" target="blank">click here</a></p>
+        
+        <p>You can reach me via <a href=""> Linkedin</a> </p>
+        <input type="text" placeholder="Type in your email">
+        <button>Join Newsletter</button>
+    </body>
+</html>
+
