--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
-<link rel="stylesheet" href="styles.css">
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="styles.css">
+    </head>
 
-<img src="google.png" width="40%"> 
-<input type="text">
-<button>Google Search</button>
-<button>I'm Feeling Lucky</button>
 
-<a href="profile.html" target="blank">Return to profile homepage</a>
+
+    <body>
+        <img src="google.png" width="40%"> 
+        <input type="text">
+        <button>Google Search</button>
+        <button>I'm Feeling Lucky</button>
+
+        <p><a href="profile.html" target="blank">Return to profile homepage</a></p>
+    </body>
+</html>
